--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.28",
+    "expo": "~51.0.37",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
@@ -39,8 +39,10 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
+    "react-native-tts": "^4.1.1",
     "react-native-web": "~0.19.10",
-    "status-bar": "^2.0.3"
+    "status-bar": "^2.0.3",
+    "expo-speech": "~12.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
